# fastapi_boilerplate

./: .env.example  README.md  pyproject.toml
app/: main.py  settings.py
app/db/: __init__.py  database.py  events.py
app/models/: course_model.py  course_teacher_model.py  teacher_model.py  user_model.py
app/models/base/: base_model.py  soft_delete.py  table_registry.py
app/repositories/: user_repository.py
app/repositories/base/: soft_delete_repository.py
app/routers/v1/: users.py
app/schemas/: user_schema.py
app/schemas/base/: pagination.py
app/schemas/validators/: password.py  phone_number.py
app/schemas/validators/base/: str_validator.py
app/security/: password_hasher.py
migrations/: env.py
migrations/versions/: b7181c3c308c_create_users_table.py
